editing the head file location in order not to crash down

--- a/DISK_C/COTTON/.vscode/settings.json
+++ b/DISK_C/COTTON/.vscode/settings.json
@@ -5,6 +5,7 @@
         "EDIT.C": "cpp",
         "MAIN.C": "cpp",
         "START.C": "cpp",
-        "PAST.C": "cpp"
+        "PAST.C": "cpp",
+        "HELP.C": "cpp"
     }
 }
