finishing the warehouse moudule editing

--- a/DISK_C/COTTON/.vscode/settings.json
+++ b/DISK_C/COTTON/.vscode/settings.json
@@ -6,6 +6,7 @@
         "MAIN.C": "cpp",
         "START.C": "cpp",
         "PAST.C": "cpp",
-        "HELP.C": "cpp"
+        "HELP.C": "cpp",
+        "HOME.C": "cpp"
     }
 }
