--- a/DISK_C/COTTON/.vscode/settings.json
+++ b/DISK_C/COTTON/.vscode/settings.json
@@ -7,6 +7,9 @@
         "START.C": "cpp",
         "PAST.C": "cpp",
         "HELP.C": "cpp",
-        "HOME.C": "cpp"
+        "HOME.C": "cpp",
+        "LOGIN.C": "cpp",
+        "LOGFUN.H": "cpp",
+        "LOGFUN.C": "cpp"
     }
 }
